# aim-deploy

./: .eslintrc.cjs  .gitignore  ADMIN_MENU_REVIEW.md  AI_CLASSIFICATION_UI_GUIDE.md  AI_FINETUNING_DATA_ANALYSIS.md  BUILD_AND_DEPLOY.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CODE_REVIEW_REPORT.md  COMMENT_INFO_STRUCTURE.md  CONTRIBUTING.md  CRAWLER_ARCHITECTURE.md  CRAWLER_GUIDE.md  CRAWLER_STOP_ANALYSIS.md  DATA_FLOW_GUIDE.md  DATA_INTEGRATION_GUIDE.md  DEBUG_BLANK_SCREEN.md  DEPLOYMENT_GUARD.md  DOMAIN_ACCESS_FIX.md  EXCEL_FILES_SUMMARY.md  EXCEL_FORMAT_GUIDE.md  EXCLUDED_BOARDS_FIX.md  EXTERNAL_ACCESS_GUIDE.md  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETUP.md  GITHUB_TOKEN_MENU_GUIDE.md  GITHUB_TOKEN_SETUP.md  GITHUB_UPLOAD_GUIDE.md  IMAGE_LOADING_STATUS.md  IMPLEMENTATION_DOCUMENTATION.md  ISSUE_CATEGORIZATION_GUIDE.md  ISSUE_DETAIL_TO_REPORT_MAPPING.md  MOBILE_EXCEL_STRUCTURE_FINAL.md  MOBILE_PARSING_GUIDE.md  MOBILE_SETUP_COMPLETE.md  MOBILE_WEEKLY_REPORT_FINAL.md  MOBILE_WEEKLY_REPORT_MAPPING.md  MONITORING_CONTROL_SETUP.md  MULTI_PROJECT_MIGRATION_GUIDE.md  ORGANIZATION_GITHUB_GUIDE.md  (+76 more)
forum-monitor/: .env.example  README.md  pyproject.toml  requirements.txt
forum-monitor/alembic/: env.py
forum-monitor/alembic/versions/: 001_initial.py
forum-monitor/app/: config.py  logging_setup.py  main.py
forum-monitor/app/api/: routes_categories.py  routes_crawl.py  routes_health.py  routes_reports.py  (+2 more)
forum-monitor/tests/: conftest.py  test_api_health.py  test_change_detection.py  test_discourse_mapper.py  test_similarity.py
services/forum_monitoring/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
(+645 files in other folders)
